[tool.poetry]
name = "gemr"
version = "0.1.0"
description = "Custom Form for Radiology Registration"
authors = ["resakse <resakse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^5.2.2"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
tkcalendar = "^1.6.1"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
